{
  "version": 4,
  "terraform_version": "0.12.26",
  "serial": 20,
  "lineage": "d82bca4f-e41c-e0d8-098a-470aa767c3fb",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_eip",
      "name": "eip_nat",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "domain": "vpc",
            "id": "eipalloc-003c0e0576ca72a31",
            "public_dns": "ec2-13-232-114-126.ap-south-1.compute.amazonaws.com",
            "public_ip": "13.232.114.126",
            "public_ipv4_pool": "amazon",
            "vpc": true
          },
          "dependencies": [
            "aws_internet_gateway.eric_ig",
            "aws_security_group.for_bastion",
            "aws_security_group.for_wp",
            "aws_vpc.my_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "bastion_host",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0732b62d310b80e97",
            "arn": "arn:aws:ec2:ap-south-1:700124350402:instance/i-0badb08717d2189d6",
            "associate_public_ip_address": true,
            "availability_zone": "ap-south-1a",
            "cpu_core_count": 1,
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_termination": false,
            "ebs_optimized": false,
            "get_password_data": false,
            "hibernation": false,
            "id": "i-0badb08717d2189d6",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "mykey111",
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional"
              }
            ],
            "monitoring": false,
            "primary_network_interface_id": "eni-093f9b970b2e060b5",
            "private_dns": "ip-192-168-2-209.ap-south-1.compute.internal",
            "private_ip": "192.168.2.209",
            "public_ip": "13.233.207.220",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 100,
                "volume_id": "vol-0a69a52c9a8984dfc",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0b01105fc63dfbe4d",
            "tenancy": "default",
            "vpc_security_group_ids": [
              "sg-03c7e8bc5761600dc"
            ]
          },
          "dependencies": [
            "aws_eip.eip_nat",
            "aws_internet_gateway.eric_ig",
            "aws_nat_gateway.bastion_nat",
            "aws_route_table.mysql_rt",
            "aws_route_table_association.rt_c",
            "aws_security_group.for_bastion",
            "aws_security_group.for_wp",
            "aws_subnet.bastion_subnet",
            "aws_subnet.eric_subnet_private",
            "aws_vpc.my_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "mysql_db",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-08706cb5f68222d09",
            "arn": "arn:aws:ec2:ap-south-1:700124350402:instance/i-06a3672976738c7df",
            "associate_public_ip_address": false,
            "availability_zone": "ap-south-1b",
            "cpu_core_count": 1,
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_termination": false,
            "ebs_optimized": false,
            "get_password_data": false,
            "hibernation": false,
            "id": "i-06a3672976738c7df",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "mykey111",
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional"
              }
            ],
            "monitoring": false,
            "primary_network_interface_id": "eni-05dbe88d0ed89b327",
            "private_dns": "ip-192-168-0-108.ap-south-1.compute.internal",
            "private_ip": "192.168.0.108",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 100,
                "volume_id": "vol-0e831c63ff6a8619d",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-043aecc1a16d17100",
            "tenancy": "default",
            "vpc_security_group_ids": [
              "sg-0a6b9176eb553f373"
            ]
          },
          "dependencies": [
            "aws_eip.eip_nat",
            "aws_instance.bastion_host",
            "aws_internet_gateway.eric_ig",
            "aws_nat_gateway.bastion_nat",
            "aws_route_table.mysql_rt",
            "aws_route_table_association.rt_c",
            "aws_security_group.for_bastion",
            "aws_security_group.for_mysql",
            "aws_security_group.for_wp",
            "aws_subnet.bastion_subnet",
            "aws_subnet.eric_subnet_private",
            "aws_vpc.my_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "wordpress",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0979674e4a8c6ea0c",
            "arn": "arn:aws:ec2:ap-south-1:700124350402:instance/i-0a85511d21352015e",
            "associate_public_ip_address": true,
            "availability_zone": "ap-south-1a",
            "cpu_core_count": 1,
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_termination": false,
            "ebs_optimized": false,
            "get_password_data": false,
            "hibernation": false,
            "id": "i-0a85511d21352015e",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "mykey111",
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional"
              }
            ],
            "monitoring": false,
            "primary_network_interface_id": "eni-089da99b8037bcfd6",
            "private_dns": "ip-192-168-1-11.ap-south-1.compute.internal",
            "private_ip": "192.168.1.11",
            "public_ip": "52.66.203.58",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 100,
                "volume_id": "vol-09a131de66f906cb8",
                "volume_size": 10,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-05e32924d1f332d7f",
            "tenancy": "default",
            "vpc_security_group_ids": [
              "sg-0037cf555672ff2df"
            ]
          },
          "dependencies": [
            "aws_eip.eip_nat",
            "aws_instance.bastion_host",
            "aws_instance.mysql_db",
            "aws_internet_gateway.eric_ig",
            "aws_nat_gateway.bastion_nat",
            "aws_route_table.mysql_rt",
            "aws_route_table_association.rt_c",
            "aws_security_group.for_bastion",
            "aws_security_group.for_mysql",
            "aws_security_group.for_wp",
            "aws_subnet.bastion_subnet",
            "aws_subnet.eric_subnet_private",
            "aws_subnet.eric_subnet_public",
            "aws_vpc.my_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "eric_ig",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:700124350402:internet-gateway/igw-08318f07d2c592b07",
            "id": "igw-08318f07d2c592b07",
            "owner_id": "700124350402",
            "tags": {
              "Name": "eric-ig"
            },
            "vpc_id": "vpc-01e1dc58cb81b39c6"
          },
          "dependencies": [
            "aws_security_group.for_bastion",
            "aws_security_group.for_wp",
            "aws_vpc.my_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "bastion_nat",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-003c0e0576ca72a31",
            "id": "nat-0b798fb448fa9cf84",
            "network_interface_id": "eni-05c6ef21339c4e3c9",
            "private_ip": "192.168.2.178",
            "public_ip": "13.232.114.126",
            "subnet_id": "subnet-0b01105fc63dfbe4d"
          },
          "dependencies": [
            "aws_eip.eip_nat",
            "aws_internet_gateway.eric_ig",
            "aws_security_group.for_bastion",
            "aws_security_group.for_wp",
            "aws_subnet.bastion_subnet",
            "aws_vpc.my_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "bastion_rt",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtb-03760db796630b47f",
            "owner_id": "700124350402",
            "propagating_vgws": [],
            "route": [
              {
                "cidr_block": "0.0.0.0/0",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-08318f07d2c592b07",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "bastion-rt"
            },
            "vpc_id": "vpc-01e1dc58cb81b39c6"
          },
          "dependencies": [
            "aws_internet_gateway.eric_ig",
            "aws_security_group.for_bastion",
            "aws_security_group.for_wp",
            "aws_vpc.my_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "mysql_rt",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtb-049b9005fa0c705a0",
            "owner_id": "700124350402",
            "propagating_vgws": [],
            "route": [
              {
                "cidr_block": "0.0.0.0/0",
                "egress_only_gateway_id": "",
                "gateway_id": "nat-0b798fb448fa9cf84",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "bastion-rt"
            },
            "vpc_id": "vpc-01e1dc58cb81b39c6"
          },
          "dependencies": [
            "aws_eip.eip_nat",
            "aws_internet_gateway.eric_ig",
            "aws_nat_gateway.bastion_nat",
            "aws_security_group.for_bastion",
            "aws_security_group.for_wp",
            "aws_subnet.bastion_subnet",
            "aws_vpc.my_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "wp_rt",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtb-0fe794f44f28ea06b",
            "owner_id": "700124350402",
            "propagating_vgws": [],
            "route": [
              {
                "cidr_block": "0.0.0.0/0",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-08318f07d2c592b07",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "wp-rt"
            },
            "vpc_id": "vpc-01e1dc58cb81b39c6"
          },
          "dependencies": [
            "aws_internet_gateway.eric_ig",
            "aws_security_group.for_bastion",
            "aws_security_group.for_wp",
            "aws_vpc.my_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "rt_a",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0f98dc848c98fdc3c",
            "route_table_id": "rtb-0fe794f44f28ea06b",
            "subnet_id": "subnet-05e32924d1f332d7f"
          },
          "dependencies": [
            "aws_internet_gateway.eric_ig",
            "aws_route_table.wp_rt",
            "aws_security_group.for_bastion",
            "aws_security_group.for_wp",
            "aws_subnet.eric_subnet_public",
            "aws_vpc.my_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "rt_b",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0f45950b03ad7cb25",
            "route_table_id": "rtb-03760db796630b47f",
            "subnet_id": "subnet-0b01105fc63dfbe4d"
          },
          "dependencies": [
            "aws_internet_gateway.eric_ig",
            "aws_route_table.bastion_rt",
            "aws_security_group.for_bastion",
            "aws_security_group.for_wp",
            "aws_subnet.bastion_subnet",
            "aws_vpc.my_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "rt_c",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0a93177e5538d354f",
            "route_table_id": "rtb-049b9005fa0c705a0",
            "subnet_id": "subnet-043aecc1a16d17100"
          },
          "dependencies": [
            "aws_eip.eip_nat",
            "aws_internet_gateway.eric_ig",
            "aws_nat_gateway.bastion_nat",
            "aws_route_table.mysql_rt",
            "aws_security_group.for_bastion",
            "aws_security_group.for_wp",
            "aws_subnet.bastion_subnet",
            "aws_subnet.eric_subnet_private",
            "aws_vpc.my_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "for_bastion",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:700124350402:security-group/sg-03c7e8bc5761600dc",
            "description": "Managed by Terraform",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-03c7e8bc5761600dc",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              }
            ],
            "name": "bastion-sg",
            "name_prefix": null,
            "owner_id": "700124350402",
            "revoke_rules_on_delete": false,
            "tags": null,
            "timeouts": null,
            "vpc_id": "vpc-01e1dc58cb81b39c6"
          },
          "dependencies": [
            "aws_security_group.for_wp",
            "aws_vpc.my_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "for_mysql",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:700124350402:security-group/sg-0a6b9176eb553f373",
            "description": "Managed by Terraform",
            "egress": [
              {
                "cidr_blocks": [],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [
                  "sg-0037cf555672ff2df"
                ],
                "self": false,
                "to_port": 0
              },
              {
                "cidr_blocks": [],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [
                  "sg-03c7e8bc5761600dc"
                ],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0a6b9176eb553f373",
            "ingress": [
              {
                "cidr_blocks": [],
                "description": "",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-03c7e8bc5761600dc"
                ],
                "self": false,
                "to_port": 22
              },
              {
                "cidr_blocks": [],
                "description": "",
                "from_port": 3306,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-0037cf555672ff2df"
                ],
                "self": false,
                "to_port": 3306
              }
            ],
            "name": "mysql-sg",
            "name_prefix": null,
            "owner_id": "700124350402",
            "revoke_rules_on_delete": false,
            "tags": null,
            "timeouts": null,
            "vpc_id": "vpc-01e1dc58cb81b39c6"
          },
          "dependencies": [
            "aws_security_group.for_bastion",
            "aws_security_group.for_wp",
            "aws_vpc.my_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "for_wp",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:700124350402:security-group/sg-0037cf555672ff2df",
            "description": "Managed by Terraform",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0037cf555672ff2df",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "wp-sg",
            "name_prefix": null,
            "owner_id": "700124350402",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "wp-sg"
            },
            "timeouts": null,
            "vpc_id": "vpc-01e1dc58cb81b39c6"
          },
          "dependencies": [
            "aws_vpc.my_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "bastion_subnet",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:700124350402:subnet/subnet-0b01105fc63dfbe4d",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-south-1a",
            "availability_zone_id": "aps1-az1",
            "cidr_block": "192.168.2.0/24",
            "id": "subnet-0b01105fc63dfbe4d",
            "map_public_ip_on_launch": true,
            "owner_id": "700124350402",
            "tags": {
              "Name": "subnet-bastion"
            },
            "vpc_id": "vpc-01e1dc58cb81b39c6"
          },
          "dependencies": [
            "aws_vpc.my_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "eric_subnet_private",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:700124350402:subnet/subnet-043aecc1a16d17100",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-south-1b",
            "availability_zone_id": "aps1-az3",
            "cidr_block": "192.168.0.0/24",
            "id": "subnet-043aecc1a16d17100",
            "map_public_ip_on_launch": false,
            "owner_id": "700124350402",
            "tags": {
              "Name": "subnet-private"
            },
            "vpc_id": "vpc-01e1dc58cb81b39c6"
          },
          "dependencies": [
            "aws_vpc.my_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "eric_subnet_public",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:700124350402:subnet/subnet-05e32924d1f332d7f",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-south-1a",
            "availability_zone_id": "aps1-az1",
            "cidr_block": "192.168.1.0/24",
            "id": "subnet-05e32924d1f332d7f",
            "map_public_ip_on_launch": true,
            "owner_id": "700124350402",
            "tags": {
              "Name": "subnet-public"
            },
            "vpc_id": "vpc-01e1dc58cb81b39c6"
          },
          "dependencies": [
            "aws_vpc.my_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "my_vpc",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:700124350402:vpc/vpc-01e1dc58cb81b39c6",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "192.168.0.0/16",
            "default_network_acl_id": "acl-05b831a878fee3d63",
            "default_route_table_id": "rtb-00473c8e1d54976d4",
            "default_security_group_id": "sg-07d2472eea950fc56",
            "dhcp_options_id": "dopt-8cb95fe7",
            "enable_dns_hostnames": false,
            "enable_dns_support": true,
            "id": "vpc-01e1dc58cb81b39c6",
            "instance_tenancy": "default",
            "main_route_table_id": "rtb-00473c8e1d54976d4",
            "owner_id": "700124350402",
            "tags": {
              "Name": "eric-vpc"
            }
          }
        }
      ]
    }
  ]
}